# basic_language_comparison

./: .gitignore  COPYRIGHT  LICENCE.md  README.md
C/: .munchausen_number.c.swp  c_job_script  test_belief_propagation.c  test_copy_matrix.c  test_evaluate_functions.c  test_fibonacci.c  test_gauss_legendre_quadrature.c  test_laplace_jacobi_4.c  test_look_and_say.c  test_markov_chain.c  test_matrix_multiplication.c  test_munchausen_number.c  test_pernicious_numbers.c
Data/: create_nc4Files.py
Fortran/: ._fortranJobScript.job  fortran_job_script  munchausen_number.F90  test_belief_propagation.F90  test_copy_matrix.F90  test_evaluate_functions.F90  test_fibonacci.F90  test_gauss_legendre_quadrature.F90  test_laplace_jacobi_4_loops.F90  test_laplace_jacobi_4_vectorized.F90  test_look_and_say.F90  test_markov_chain.F90  test_matrix_multiplication.F90  test_matrix_multiplication_DGEMM.F90  test_munchausen_number.F90  test_pernicious_numbers.F90  timer_module.F90
IDL/: brm_gau_leg_54.pro  idl_job_script  run_all_scripts.pro  test_belief_propagation.pro  test_compute_fft.pro  test_copy_matrix.pro  test_evaluate_functions.pro  test_fibonacci.pro  test_gauss_legendre_quadrature.pro  test_laplace_jacobi_4.pro  test_look_and_say.pro  test_markov_chain.pro  (+5 more)
Rust/: Cargo.toml  rust_job_script  test_belief_propagation.rs  test_copy_matrix.rs  test_evaluate_functions.rs  test_fibonacci.rs  test_gauss_legendre_quadrature.rs  test_laplace_jacobi_4.rs  test_look_and_say.rs  test_markov_chain.rs  test_matrix_multiplication.rs  test_munchausen_number.rs  test_pernicious_numbers.rs
(+136 files in other folders)
